# case-generate

./: .gitignore  .gitmodules  FileGenerator.py  Logger.py  README.md  StructureHandler.py  __init__.py  cli.py  file_generator.py  format_precice_config.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: a.txt  check.yml  installation.yml  port-to-v3.yml  python-app.yml
controller_utils/myutils/: __init__.py
controller_utils/precice_struct/: PS_CouplingScheme.py  PS_Mesh.py  PS_ParticipantSolver.py  PS_PreCICEConfig.py  PS_QuantityCoupled.py
controller_utils/ui_struct/: UI_Coupling.py  UI_Participant.py  UI_SimulationInfo.py  UI_UserInput.py
examples/0/: README.md  precice-config.xml  topology.yaml
examples/1/: README.md  precice-config.xml  topology.yaml
examples/2/: README.md  inspiration.txt  precice-config.xml  topology.yaml
examples/3/: README.md  inspiration.txt  precice-config.xml  topology.yaml
examples/4/: README.md  precice-config.xml  topology.yaml
examples/5/: README.md  precice-config.xml  topology.yaml
examples/multi-coupling/: topology.yaml
examples/strong-coupling/: topology.yaml
examples/tutorial2/: topology.yaml
examples/tutorial3/: topology.yaml
examples/tutorial4/: topology.yaml
generation_utils/: AdapterConfigGenerator.py  StructureHandler.py  __init__.py  adapter_config_generator.py  config_generator.py  file_generator.py  format_precice_config.py  logger.py  other_files_generator.py  structure_handler.py
new_examples/multi-coupling/: precice-config.xml
new_examples/tutorial1/: precice-config.xml  tutorial1.yaml
new_examples/tutorial2/: precice-config.xml  tutorial2.yaml
new_examples/tutorial3/: precice-config.xml
new_examples/tutorial4/: precice-config.xml
precice_struct/: PS_CouplingScheme.py  PS_Mesh.py  PS_ParticipantSolver.py  PS_PreCICEConfig.py  PS_QuantityCoupled.py  __init__.py
precicecasegenerate/: cli.py  cli_helper.py  helper.py  logging_setup.py  node_creator.py
precicecasegenerate/adapter_config_creator/: adapter_config_creator.py
precicecasegenerate/config_creator/: config_creator.py  helper.py  node_creator.py
precicecasegenerate/controller_utils/: __init__.py
precicecasegenerate/file_creators/: adapter_config_creator.py  config_creator.py  utility_file_creator.py
precicecasegenerate/generation_utils/: adapter_config_generator.py  config_generator.py  file_generator.py  format_precice_config.py  logger.py  other_files_generator.py  readme_generator.py  structure_handler.py
precicecasegenerate/input_handler/: topology_reader.py
precicecasegenerate/schemas/: README.md  adapter-config-schema.json  topology-schema.json
precicecasegenerate/setup_scripts/: install_dependencies.sh
precicecasegenerate/templates/: adapter-config-template.json  template_README.md
schemas/: README.md  Topology_ReadMe.md  precice-config-schema.json  topology-schema.json
setup_scripts/: install_dependencies.ps1  install_dependencies.sh
templates/: adapter-config-template.json  metaConfiguratorSettings.json  template_README.md  template_clean.sh  template_run.sh
tests/: broken_precice_config.xml  test_coupling_scheme_configuration.py  test_examples.py  test_porting_to_v3.py  test_validate_all_configs.py  test_validate_config.py
tests/coupling_scheme_type/: coupling_scheme_test.py
validation/: validate_all_configs.py  validate_config.py
(+164 files in other folders)
