[build-system]
requires = ["setuptools>=41", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "precice-case-generate"
dynamic = ["version"]
description = "Generate files and folder structure for a coupled simulation with preCICE."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Orlando", email = "orlac2700@gmail.com" },
]

requires-python = ">= 3.10"
dependencies = [
    "precice-config-graph",
    "pyyaml",
    "jsonschema",
    "precice-config-check @ git+https://github.com/precice/config-check.git"
]

[project.scripts]
precice-case-generate = "precicecasegenerate.cli:main"

[project.urls]
Repository = "https://github.com/precice/case-generate"
Documentation = "https://github.com/precice/case-generate/blob/main/README.md"

[tool.setuptools]
packages = [
    "precicecasegenerate",
]

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.package-data]
precicecasegenerate = [
    "templates/*",
    "schemas/*"
]
